<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="10">
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>
    <TextView
        android:id="@+id/RES"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:background="@color/colorMain"
        >
    </TextView>
    <LinearLayout
        android:layout_width="400dp"
        android:layout_gravity="center"
        android:background="@color/colorBtn"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:weightSum="6"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">
            <Button
                android:id="@+id/MC"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/MC">
            </Button>
            <Button
                android:id="@+id/MR"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/MR">
            </Button>
            <Button
                android:id="@+id/MS"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/MS">
            </Button>
            <Button
                android:id="@+id/Mp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/Mp">
            </Button>
            <Button
                android:id="@+id/Mm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/Mm">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">
            <Button
            android:id="@+id/DEL"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
            android:text="@string/DEL">
            </Button>
            <Button
                android:id="@+id/CE"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/CE">
            </Button>
            <Button
                android:id="@+id/C"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/C">
            </Button>
            <Button
                android:id="@+id/mp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/pm">
            </Button>
            <Button
                android:id="@+id/SQR"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/SQR">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">
            <Button
                android:id="@+id/N7"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N7">
            </Button>
            <Button
                android:id="@+id/N8"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N8">
            </Button>
            <Button
                android:id="@+id/N9"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N9">
            </Button>
            <Button
                android:id="@+id/DIV"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/DIV">
            </Button>
            <Button
                android:id="@+id/PC"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/PC">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">
            <Button
                android:id="@+id/N4"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N4">
            </Button>
            <Button
                android:id="@+id/N5"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N5">
            </Button>
            <Button
                android:id="@+id/N6"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N6">
            </Button>
            <Button
                android:id="@+id/MP"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/MP">
            </Button>
            <Button
                android:id="@+id/X"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/X">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">
            <Button
                android:id="@+id/N1"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N1">
            </Button>
            <Button
                android:id="@+id/N2"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N2">
            </Button>
            <Button
                android:id="@+id/N3"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N3">
            </Button>
            <Button
                android:id="@+id/m"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/m">
            </Button>
            <Button
                android:id="@+id/EQ"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/EQ">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="5"
            android:orientation="horizontal">
            <Button
                android:id="@+id/N0"
                android:onClick="miClick"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/N0">
            </Button>

            <Button
                android:id="@+id/PNT"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/PNT">
            </Button>
            <Button
                android:id="@+id/p"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/p">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
    </View>
</LinearLayout>